# k-blackbox

./: .gitignore  100  Cargo.toml  LICENSE  PROJECT_DESCRIPTION.md  README.md  test.sh
crates/blackbox-core/: Cargo.toml
crates/blackbox-core/src/: checksum.rs  health.rs  incident.rs  lib.rs  orderbook.rs  precision.rs  recorder.rs  replayer.rs  types.rs
crates/blackbox-server/: Cargo.toml
crates/blackbox-server/src/: http.rs  incident.rs  main.rs  main.rs.bak  metrics.rs  state.rs  static_ui.rs
crates/blackbox-server/src/integrity/: checksum_helper.rs  fault.rs  incident.rs  mod.rs  proof.rs
crates/blackbox-server/src/tui/: app.rs  keys.rs  mod.rs  snapshot.rs  ui.rs  widgets.rs
crates/blackbox-ws/: Cargo.toml
crates/blackbox-ws/src/: client.rs  lib.rs  parser.rs  subscriptions.rs
docs/: API.md  QUICK_TEST.md  SYSTEM_OVERVIEW.md  TESTING.md
