[workspace]
members = [
    "crates/blackbox-core",
    "crates/blackbox-ws",
    "crates/blackbox-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kraken Blackbox"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/kraken-blackbox"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
crc32fast = "1.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
flate2 = "1.0"
zip = "0.6"

