[package]
name = "blackbox-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "blackbox"
path = "src/main.rs"

[dependencies]
blackbox-core = { path = "../blackbox-core" }
blackbox-ws = { path = "../blackbox-ws" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
rust_decimal = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
atty = "0.2"